--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -8,15 +8,28 @@
     <title>jQuery</title>
 </head>
 <body>
-    <h1 id="header">jQuery</h1>
-    <h1 class="header">butt</h1>
+    <h1 id="header" class="heading">jQuery</h1>
+    <p id="paragraph" > this is a paragraph</p>
+
+    <ul id="unordered-list">
+        <li id="list1"> list item 1</li>
+        <li id="list2"> list item 2</li>
+        <li id="list3"> list item 3</li>
+    </ul>
+
+
+
+
     <script src="js/jquery-2.2.4.js"></script>
     <script>
 
-        $(document).ready(function() {
+        // $(document).ready(function() {
+        //     var parText = $('#unordered-list').text();
+        //     alert( parText);
+        //     alert( 'The DOM has finished loading!' );
+        // });
 
-            alert( 'The DOM has finished loading!' );
-        });
+
 
     </script>
 </body>
