--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -35,7 +35,8 @@
         // });
 
         $(document).ready(function () {
-            $('li, h1, p').css('font-size', "20px");
+            $('li').css('font-size', "20px").css('background-color', 'yellow');
+            $(' h1, p').css('font-size', "20px").css('background-color', 'yellow');
             alert($('h1').text());
 
         })
