--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -35,12 +35,11 @@
         // });
 
         $(document).ready(function () {
-            $('li').css('font-size', "20px").css('background-color', 'yellow');
-            $(' h1, p').css('font-size', "20px").css('background-color', 'yellow');
+            $('li').css('font-size', "20px");
+            $(' h1, p, li').css('background-color', 'yellow');
             alert($('h1').text());
 
-        })
-
+        });
 
     </script>
 </body>
