--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -23,21 +23,25 @@
     <script src="js/jquery-2.2.4.js"></script>
     <script>
 
-        // $(document).ready(function() {
-        //     var parText = $('#unordered-list').text();
-        //     alert( parText);
-        //     alert( 'The DOM has finished loading!' );
-        // });
-
-        // $(document).ready(function () {
-        //     $(".codeup").css('border', '1px solid red');
-        //
-        // });
 
         $(document).ready(function () {
-            $('li').css('font-size', "20px");
-            $(' h1, p, li').css('background-color', 'yellow');
-            alert($('h1').text());
+            $('#header').click(
+                function() {
+                    $(this).css('background-color', 'cyan');
+                });
+            $('p').dblclick(
+                function () {
+                    $(this).css('font-size', '18px');
+            });
+
+            $('li').hover(
+                function () {
+                    $(this).css('color', 'red');
+                },
+                function () {
+                    $(this).css('color', 'black');
+                });
+
 
         });
 
