fade in effect added to register h2

--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -197,7 +197,7 @@
             $('#register').hide();
 
             setTimeout(function () {
-                $('#register').show();
+                $('#register').fadeIn();
             },8000);
 
         });
