--- a/ajax-store.html
+++ b/ajax-store.html
@@ -48,7 +48,7 @@
 
         $('#refresh').click(function () {
             $.ajax('data/inventory.json').done(function (data) {
-                $('#insertProducts').html('')
+                $('#insertProducts').html('');
                 data.forEach(function (item) {
                     $('#insertProducts').append('<tr>'+ '<td>'+ item.title +'</td>' + '<td>'+ item.quantity +'</td>'+ '<td>'+ item.price +'</td>'+ '<td>'+ item.categories +'</td>' + '</tr>')
                 });
