--- a/weather_map.html
+++ b/weather_map.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/weather.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
     <title>Weather or Not</title>
 </head>
 <body>
@@ -36,6 +37,27 @@
         center: [-98.4936, 29.4241]
 
     });
+
+    var marker = new mapboxgl.Marker({
+        draggable: true
+    })
+        .setLngLat([-98.4936, 29.4241])
+        .addTo(map);
+
+    function onDragEnd() {
+        return marker.getLngLat();
+
+    }
+    var coordinates = onDragEnd();
+
+    console.log(coordinates);
+
+    marker.on('dragend', onDragEnd);
+
+    var latitude = coordinates.lat;
+
+    var longitude = coordinates.lng;
+
 
 
 
@@ -114,10 +136,68 @@
                 weatherLocation = rearangeLatAndLong;
                 console.log(weatherLocation);
 
+                $.get("https://cors-anywhere.herokuapp.com/https://api.darksky.net/forecast/"+ darkSkyKey + '/'+ weatherLocation).done(function (data) {
 
+                    $('#threeDayForecast').html('');
+                    //THREE DAY FORECAST
+
+                    for (var i = 0; i < 3; i++){
+                        var day = data.daily.data[i];
+
+                        //DECIDES WHAT ICON TO USE
+
+
+                        function whatIcon(day){
+                            var iconToUse;
+                            if (day.icon === 'clear-day'){
+                                iconToUse = '<img src="icon/sunny.png" height="100" width="100"/>'
+
+                            } else if(day.icon === 'clear-night'){
+                                iconToUse = '<img src="icon/moon.png" height="100" width="100"/>'
+                            }else if(day.icon === 'partly-cloudy-day'){
+                                iconToUse = '<img src="icon/partly-cloudy-day.png" height="100" width="100"/>'
+                            }else if(day.icon === 'partly-cloudy-night'){
+                                iconToUse = '<img src="icon/partly-cloudy-night.png" height="100" width="100"/>'
+                            }else if (day.icon === 'cloudy'){
+                                iconToUse = '<img src="icon/cloudy.png" height="100" width="100"/>'
+                            }else if (day.icon === 'rain'){
+                                iconToUse = '<img src="icon/rain.png" height="100" width="100"/>'
+                            }else if (day.icon === 'sleet'){
+                                iconToUse = '<img src="icon/sleet.png" height="100" width="100"/>'
+                            }else if (day.icon === 'snow'){
+                                iconToUse = '<img src="icon/snow.png" height="100" width="100"/>'
+                            }else if (day.icon === 'wind'){
+                                iconToUse = '<img src="icon/wind.png" height="100" width="100"/>'
+                            }else if (day.icon === 'fog'){
+                                iconToUse = '<img src="icon/fog.png" height="100" width="100"/>'
+                            }
+
+                            return iconToUse;
+                        }
+
+                        var icon = whatIcon(day);
+
+
+                        //UPDATES HTML WITH THREE DAY FORECAST
+
+                        $('#threeDayForecast').append(
+                            '<div class="col-sm-4">' +
+                            '   <div class="card">' +
+                            '   <div class="card-body">' +
+                            '  <h5 class="card-title">'+ day.apparentTemperatureHigh.toFixed(0)+ '°' +  '/' + day.apparentTemperatureLow.toFixed(0)+ '°' +'</h5>' +
+                            '<span>'+ icon +'</span>' +
+                            '<ul> <li>' +'Humidity: '+ day.humidity +'</li>' + '<li>'+ 'Wind: ' + day.windGust + '</li>'+ '<li>' +'Pressure: ' +day.pressure + '</li> </ul>'+
+                            '</div>' +
+                            '</div>' +
+                            '</div>'
+                        );
+
+
+                    }
+                    console.log(data)
+                });
             });
         }
-
     });
 
 
