--- a/weather_map.html
+++ b/weather_map.html
@@ -26,7 +26,7 @@
 <script src="js/mapbox-utils.js"></script>
 <script>
     "use strict";
-    var weatherLocation = '29.4241,-98.4936';
+
 
     //STARTS MAP AT SAN ANTONIO
     mapboxgl.accessToken = mapboxToken;
@@ -47,6 +47,7 @@
     function onDragEnd() {
         return marker.getLngLat();
 
+
     }
     var coordinates = onDragEnd();
 
@@ -58,6 +59,7 @@
 
     var longitude = coordinates.lng;
 
+    var weatherLocation = latitude + ',' + longitude;
 
 
 
