--- a/weather_map.html
+++ b/weather_map.html
@@ -9,10 +9,15 @@
     <link rel="stylesheet" href="css/weather.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Paaji|Roboto&display=swap" rel="stylesheet">
     <title>Weather or Not</title>
 </head>
 <body>
-<h1>Weather Forecast</h1>
+<header>
+    <span class="heading">Weather Forecast</span>
+    <span id="date"></span>
+    <span id="time"></span>
+</header>
 <h3 id="city"> SAN ANTONIO, TX</h3>
 <div id="threeDayForecast" class="row"></div>
 <div id="map"></div>
@@ -28,17 +33,32 @@
 "use strict";
 (function () {
 
+    //DATE AND TIME
 
+    var today = new Date().toDateString();
+    var time = new Date().toLocaleTimeString()
+    $('#date').html(today);
+    $('#time').html(time);
 
-    var weatherLocation = '29.4241, -98.4936';
+    setInterval(function () {
+        time = new Date().toLocaleTimeString();
+        var hour = new Date().getHours();
+        console.log(hour);
+        $('#time').html(time);
+        if(hour >= 20){
+            $('body').addClass('nightmode')
+        }
+
+    }, 1000);
 
     //STARTS MAP AT SAN ANTONIO
 
+    var weatherLocation = '29.4241, -98.4936';
     mapboxgl.accessToken = mapboxToken;
     var map = new mapboxgl.Map({
         container: 'map',
         style: 'mapbox://styles/mapbox/streets-v9',
-        zoom: 6,
+        zoom: 10,
         center: [-98.4936, 29.4241]
 
     });
@@ -115,12 +135,14 @@
 
     function onDragEnd() {
         var coordinates = marker.getLngLat();
-
         var latitude = coordinates.lat;
-
         var longitude = coordinates.lng;
-
         var weatherLocation = latitude + ',' + longitude;
+        console.log(coordinates);
+
+        reverseGeocode(coordinates , mapboxToken).then(function (result) {
+            $('#city').html(result.toUpperCase());
+        });
 
         $.get("https://cors-anywhere.herokuapp.com/https://api.darksky.net/forecast/"+ darkSkyKey + '/'+ weatherLocation).done(function (data) {
 
@@ -188,6 +210,7 @@
     $('#search').keyup(function (e) {
         if(e.which === 13){
             var location = $('#search').val();
+            console.log(location);
             geocode(location , mapboxToken).then(function (result) {
                 map.flyTo({ center:result});
                 $('#city').html(location.toUpperCase());
