--- a/weather_map.html
+++ b/weather_map.html
@@ -20,10 +20,12 @@
 </header>
 <h3 id="city"> SAN ANTONIO, TX</h3>
 <div id="threeDayForecast" class="row"></div>
-<div id="map"></div>
-<input class="form-control" id="search" type="text" placeholder="Enter City Here">
-
-
+<div id="mapContainer">
+    <div id="map"></div>
+</div>
+<div id="searchContainer">
+    <input class="form-control" id="search" type="text" placeholder="Enter City Here">
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.2.1/mapbox-gl.js'></script>
@@ -32,24 +34,6 @@
 <script>
 "use strict";
 (function () {
-
-    //DATE AND TIME
-
-    var today = new Date().toDateString();
-    var time = new Date().toLocaleTimeString()
-    $('#date').html(today);
-    $('#time').html(time);
-
-    setInterval(function () {
-        time = new Date().toLocaleTimeString();
-        var hour = new Date().getHours();
-        console.log(hour);
-        $('#time').html(time);
-        if(hour >= 20){
-            $('body').addClass('nightmode')
-        }
-
-    }, 1000);
 
     //STARTS MAP AT SAN ANTONIO
 
@@ -62,6 +46,25 @@
         center: [-98.4936, 29.4241]
 
     });
+
+    //DATE AND TIME
+
+    var today = new Date().toDateString();
+    var time = new Date().toLocaleTimeString();
+    $('#date').html(today);
+    $('#time').html(time);
+
+    setInterval(function () {
+        time = new Date().toLocaleTimeString();
+        var hour = new Date().getHours();
+        console.log(hour);
+        $('#time').html(time);
+        if(hour >= 20){
+            $('body').addClass('nightmode');
+            map.setStyle('mapbox://styles/mapbox/dark-v10');
+        }
+
+    }, 1000);
 
     //STARTS MARKER AT SAN ANTONIO
 
@@ -89,7 +92,6 @@
                 var iconToUse;
                 if (day.icon === 'clear-day'){
                     iconToUse = '<img src="icon/sunny.png" height="100" width="100"/>'
-
                 } else if(day.icon === 'clear-night'){
                     iconToUse = '<img src="icon/moon.png" height="100" width="100"/>'
                 }else if(day.icon === 'partly-cloudy-day'){
@@ -155,12 +157,10 @@
 
                 //DECIDES WHAT ICON TO USE
 
-
                 function whatIcon(day){
                     var iconToUse;
                     if (day.icon === 'clear-day'){
                         iconToUse = '<img src="icon/sunny.png" height="100" width="100"/>'
-
                     } else if(day.icon === 'clear-night'){
                         iconToUse = '<img src="icon/moon.png" height="100" width="100"/>'
                     }else if(day.icon === 'partly-cloudy-day'){
@@ -233,7 +233,6 @@
                             var iconToUse;
                             if (day.icon === 'clear-day'){
                                 iconToUse = '<img src="icon/sunny.png" height="100" width="100"/>'
-
                             } else if(day.icon === 'clear-night'){
                                 iconToUse = '<img src="icon/moon.png" height="100" width="100"/>'
                             }else if(day.icon === 'partly-cloudy-day'){
