--- a/weather_map.html
+++ b/weather_map.html
@@ -82,61 +82,64 @@
 
     //STARTS WEATHER FORECAST AT SAN ANTONIO
 
-    $.get("https://cors-anywhere.herokuapp.com/https://api.darksky.net/forecast/"+ darkSkyKey + '/'+ weatherLocation).done(function (data) {
+  var ajaxStuff = function() {
+      $.get("https://cors-anywhere.herokuapp.com/https://api.darksky.net/forecast/" + darkSkyKey + '/' + weatherLocation).done(function (data) {
 
-        $('#threeDayForecast').html('');
+          $('#threeDayForecast').html('');
 
-        //THREE DAY FORECAST
+          //THREE DAY FORECAST
 
-        for (var i = 0; i < 3; i++){
-            var day = data.daily.data[i];
+          for (var i = 0; i < 3; i++) {
+              var day = data.daily.data[i];
 
-            //DECIDES WHAT ICON TO USE
+              //DECIDES WHAT ICON TO USE
 
-            function whatIcon(day){
-                var iconToUse;
-                if (day.icon === 'clear-day'){
-                    iconToUse = '<img src="icon/sunny.png" height="100" width="100"/>'
-                } else if(day.icon === 'clear-night'){
-                    iconToUse = '<img src="icon/moon.png" height="100" width="100"/>'
-                }else if(day.icon === 'partly-cloudy-day'){
-                    iconToUse = '<img src="icon/partly-cloudy-day.png" height="100" width="100"/>'
-                }else if(day.icon === 'partly-cloudy-night'){
-                    iconToUse = '<img src="icon/partly-cloudy-night.png" height="100" width="100"/>'
-                }else if (day.icon === 'cloudy'){
-                    iconToUse = '<img src="icon/cloudy.png" height="100" width="100"/>'
-                }else if (day.icon === 'rain'){
-                    iconToUse = '<img src="icon/rain.png" height="100" width="100"/>'
-                }else if (day.icon === 'sleet'){
-                    iconToUse = '<img src="icon/sleet.png" height="100" width="100"/>'
-                }else if (day.icon === 'snow'){
-                    iconToUse = '<img src="icon/snow.png" height="100" width="100"/>'
-                }else if (day.icon === 'wind'){
-                    iconToUse = '<img src="icon/wind.png" height="100" width="100"/>'
-                }else if (day.icon === 'fog'){
-                    iconToUse = '<img src="icon/fog.png" height="100" width="100"/>'
-                }
+              function whatIcon(day) {
+                  var iconToUse;
+                  if (day.icon === 'clear-day') {
+                      iconToUse = '<img src="icon/sunny.png" height="100" width="100"/>'
+                  } else if (day.icon === 'clear-night') {
+                      iconToUse = '<img src="icon/moon.png" height="100" width="100"/>'
+                  } else if (day.icon === 'partly-cloudy-day') {
+                      iconToUse = '<img src="icon/partly-cloudy-day.png" height="100" width="100"/>'
+                  } else if (day.icon === 'partly-cloudy-night') {
+                      iconToUse = '<img src="icon/partly-cloudy-night.png" height="100" width="100"/>'
+                  } else if (day.icon === 'cloudy') {
+                      iconToUse = '<img src="icon/cloudy.png" height="100" width="100"/>'
+                  } else if (day.icon === 'rain') {
+                      iconToUse = '<img src="icon/rain.png" height="100" width="100"/>'
+                  } else if (day.icon === 'sleet') {
+                      iconToUse = '<img src="icon/sleet.png" height="100" width="100"/>'
+                  } else if (day.icon === 'snow') {
+                      iconToUse = '<img src="icon/snow.png" height="100" width="100"/>'
+                  } else if (day.icon === 'wind') {
+                      iconToUse = '<img src="icon/wind.png" height="100" width="100"/>'
+                  } else if (day.icon === 'fog') {
+                      iconToUse = '<img src="icon/fog.png" height="100" width="100"/>'
+                  }
 
-                return iconToUse;
-            }
+                  return iconToUse;
+              }
 
-            var icon = whatIcon(day);
+              var icon = whatIcon(day);
 
-            //UPDATES HTML WITH THREE DAY FORECAST
+              //UPDATES HTML WITH THREE DAY FORECAST
 
-            $('#threeDayForecast').append(
-                '<div class="col-sm-4">' +
-                '   <div class="card">' +
-                '       <div class="card-body">' +
-                '           <h5 class="card-title">'+ day.apparentTemperatureHigh.toFixed(0)+ '°' +  '/' + day.apparentTemperatureLow.toFixed(0)+ '°' +'</h5>' +
-                '           <span>'+ icon +'</span>' +
-                '           <ul> <li>' +'Humidity: '+ day.humidity +'</li>' + '<li>'+ 'Wind: ' + day.windGust + '</li>'+ '<li>' +'Pressure: ' +day.pressure + '</li> </ul>'+
-                '       </div>' +
-                '   </div>' +
-                '</div>'
-            );
-        }
-    });
+              $('#threeDayForecast').append(
+                  '<div class="col-sm-4">' +
+                  '   <div class="card">' +
+                  '       <div class="card-body">' +
+                  '           <h5 class="card-title">' + day.apparentTemperatureHigh.toFixed(0) + '°' + '/' + day.apparentTemperatureLow.toFixed(0) + '°' + '</h5>' +
+                  '           <span>' + icon + '</span>' +
+                  '           <ul> <li>' + 'Humidity: ' + day.humidity + '</li>' + '<li>' + 'Wind: ' + day.windGust + '</li>' + '<li>' + 'Pressure: ' + day.pressure + '</li> </ul>' +
+                  '       </div>' +
+                  '   </div>' +
+                  '</div>'
+              );
+          }
+      });
+  }
+  ajaxStuff();
 
     //CHANGES WHEN MARKER MOVES
 
@@ -230,64 +233,9 @@
                 marker.setLngLat(result);
                 weatherLocation = result.reverse().join(',');
 
-                $.get("https://cors-anywhere.herokuapp.com/https://api.darksky.net/forecast/"+ darkSkyKey + '/'+ weatherLocation).done(function (data) {
-
-                    $('#threeDayForecast').html('');
-
-                    //THREE DAY FORECAST
-
-                    for (var i = 0; i < 3; i++){
-                        var day = data.daily.data[i];
-
-                        //DECIDES WHAT ICON TO USE
-
-
-                        function whatIcon(day){
-                            var iconToUse;
-                            if (day.icon === 'clear-day'){
-                                iconToUse = '<img src="icon/sunny.png" height="100" width="100"/>'
-                            } else if(day.icon === 'clear-night'){
-                                iconToUse = '<img src="icon/moon.png" height="100" width="100"/>'
-                            }else if(day.icon === 'partly-cloudy-day'){
-                                iconToUse = '<img src="icon/partly-cloudy-day.png" height="100" width="100"/>'
-                            }else if(day.icon === 'partly-cloudy-night'){
-                                iconToUse = '<img src="icon/partly-cloudy-night.png" height="100" width="100"/>'
-                            }else if (day.icon === 'cloudy'){
-                                iconToUse = '<img src="icon/cloudy.png" height="100" width="100"/>'
-                            }else if (day.icon === 'rain'){
-                                iconToUse = '<img src="icon/rain.png" height="100" width="100"/>'
-                            }else if (day.icon === 'sleet'){
-                                iconToUse = '<img src="icon/sleet.png" height="100" width="100"/>'
-                            }else if (day.icon === 'snow'){
-                                iconToUse = '<img src="icon/snow.png" height="100" width="100"/>'
-                            }else if (day.icon === 'wind'){
-                                iconToUse = '<img src="icon/wind.png" height="100" width="100"/>'
-                            }else if (day.icon === 'fog'){
-                                iconToUse = '<img src="icon/fog.png" height="100" width="100"/>'
-                            }
-
-                            return iconToUse;
-                        }
-
-                        var icon = whatIcon(day);
-
-                        //UPDATES HTML WITH THREE DAY FORECAST
-
-                        $('#threeDayForecast').append(
-                            '<div class="col-sm-4">' +
-                            '   <div class="card">' +
-                            '       <div class="card-body">' +
-                            '           <h5 class="card-title">'+ day.apparentTemperatureHigh.toFixed(0)+ '°' +  '/' + day.apparentTemperatureLow.toFixed(0)+ '°' +'</h5>' +
-                            '           <span>'+ icon +'</span>' +
-                            '           <ul> <li>' +'Humidity: '+ day.humidity +'</li>' + '<li>'+ 'Wind: ' + day.windGust + '</li>'+ '<li>' +'Pressure: ' +day.pressure + '</li> </ul>'+
-                            '       </div>' +
-                            '   </div>' +
-                            '</div>'
-                        );
-                    }
-                });
+                ajaxStuff();
             });
-        // }
+
     });
 
 })();
