--- a/weather_map.html
+++ b/weather_map.html
@@ -131,7 +131,11 @@
                   '       <div class="card-body">' +
                   '           <h5 class="card-title">' + day.apparentTemperatureHigh.toFixed(0) + '°' + '/' + day.apparentTemperatureLow.toFixed(0) + '°' + '</h5>' +
                   '           <span>' + icon + '</span>' +
-                  '           <ul> <li>' + 'Humidity: ' + day.humidity + '</li>' + '<li>' + 'Wind: ' + day.windGust + '</li>' + '<li>' + 'Pressure: ' + day.pressure + '</li> </ul>' +
+                  '           <ul>' +
+                  '              <li>' + 'Humidity: ' + day.humidity + '</li>' +
+                  '              <li>' + 'Wind: ' + day.windGust + '</li>' +
+                  '              <li>' + 'Pressure: ' + day.pressure + '</li> ' +
+                  '           </ul>' +
                   '       </div>' +
                   '   </div>' +
                   '</div>'
@@ -199,9 +203,13 @@
                     '<div class="col-sm-4">' +
                     '   <div class="card">' +
                     '       <div class="card-body">' +
-                    '           <h5 class="card-title">'+ day.apparentTemperatureHigh.toFixed(0)+ '°' +  '/' + day.apparentTemperatureLow.toFixed(0)+ '°' +'</h5>' +
-                    '           <span>'+ icon +'</span>' +
-                    '           <ul> <li>' +'Humidity: '+ day.humidity +'</li>' + '<li>'+ 'Wind: ' + day.windGust + '</li>'+ '<li>' +'Pressure: ' +day.pressure + '</li> </ul>'+
+                    '           <h5 class="card-title">' + day.apparentTemperatureHigh.toFixed(0) + '°' + '/' + day.apparentTemperatureLow.toFixed(0) + '°' + '</h5>' +
+                    '           <span>' + icon + '</span>' +
+                    '           <ul>' +
+                    '              <li>' + 'Humidity: ' + day.humidity + '</li>' +
+                    '              <li>' + 'Wind: ' + day.windGust + '</li>' +
+                    '              <li>' + 'Pressure: ' + day.pressure + '</li> ' +
+                    '           </ul>' +
                     '       </div>' +
                     '   </div>' +
                     '</div>'
@@ -223,7 +231,6 @@
     document.getElementById('geocoder').append(geocoder.onAdd(map));
 
     $('#geocoder').change(function (e) {
-        // if(e.which === 13){
             geocoder.mapMarker.remove();
             var location = geocoder.inputString;
             console.log(geocoder);
@@ -235,7 +242,6 @@
 
                 ajaxStuff();
             });
-
     });
 
 })();
