--- a/order-pizza.html
+++ b/order-pizza.html
@@ -123,7 +123,8 @@
                                 <br>
 
                                 <div class="card-footer flex-right">
-                                    <a href="#cheese" class="btn btn-primary" >Next Step  <i class="fas fa-chevron-right"> </i></a>
+
+                                    <a id="next1" href="#cheese-tab" class="btn btn-primary"  >Next Step  <i class="fas fa-chevron-right"> </i></a>
                                 </div>
                             </div>
                         </div>
@@ -182,8 +183,8 @@
 
                                 <div class="card-footer flex-right">
                                     <div class="btn-group" role="group" aria-label="Basic example ">
-                                        <button type="button"  class="btn btn-secondary" ><a href="#size" class="btn-text1"><i class="fas fa-chevron-left"> </i>Previous Step</a></button>
-                                        <button type="button" class="btn btn-secondary" ><a href="#toppings" class="btn-text1">Next Step <i class="fas fa-chevron-right"> </i></a></button>
+                                        <button id="prev1" type="button"  class="btn btn-secondary" ><a href="#size" class="btn-text1"><i class="fas fa-chevron-left"> </i>Previous Step</a></button>
+                                        <button id="next2" type="button" class="btn btn-secondary" ><a href="#toppings" class="btn-text1">Next Step <i class="fas fa-chevron-right"> </i></a></button>
                                     </div>
 
                                 </div>
@@ -250,6 +251,21 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+         <script>
 
+             $('#next1').on('click',function () {
+                $('#cheese-tab').tab('show')
+             });
+
+             $('#prev1').on('click',function () {
+                 $('#size-tab').tab('show')
+             });
+
+             $('#next2').on('click',function () {
+                 $('#toppings-tab').tab('show')
+             });
+
+
+         </script>
     </body>
 </html>
